<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_blue"
    tools:context=".activities.QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Witaj"
            android:textSize="45sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Odpowiedz na kilka pytań. Pomogą one w dalszym działaniu aplikacji"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Jaka jest twoja waga?"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/qWeight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Waga kg"
            android:minHeight="48dp" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Jaki jest twój wzros(cm)?"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/qHeight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Wzrost cm"
            android:minHeight="48dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Ile masz lat?"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/qAge"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Wiek"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Podaj swoją płeć"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white">

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Kobieta"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Mężczyzna"
                android:textColor="@color/white"/>

        </RadioGroup>

        <Button
            android:id="@+id/confirm_button_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Zatwierdź"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>