<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.CartActivity"
    android:background="@drawable/background_blue">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/purple_200"
        app:cardCornerRadius="8dp"
        app:cardElevation="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Wartości odżywcze z twoich zakupów"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Wartość energetyczna(kcal)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarKCAL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="2000"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>
                <TextView
                    android:id="@+id/textViewKCAL"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/temp_text_nuritional_values"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Białko(g)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarProtein"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="2000"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progress="0"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>
                <TextView
                    android:id="@+id/textViewProtein"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/temp_text_nuritional_values"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Tłuszcze(g)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarFat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progress="0"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>
                <TextView
                    android:id="@+id/textViewFat"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/temp_text_nuritional_values"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Węglowodany(g)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarCarbohydrates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progress="0"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>

                <TextView
                    android:id="@+id/textViewCarbohydrates"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/temp_text_nuritional_values"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Błonnik(g)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarFiber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progress="0"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>

                <TextView
                    android:id="@+id/textViewFiber"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/temp_text_nuritional_values"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:text="Sól(g)"
                android:textStyle="bold"
                android:background="@drawable/border_text_view"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ProgressBar
                    android:id="@+id/progressBarSalt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="5"
                    android:minHeight="50dp"
                    android:progressDrawable="@drawable/custom_progress_bar"
                    android:progress="0"
                    android:indeterminate="false"
                    style="?android:attr/progressBarStyleHorizontal"/>

                <TextView
                    android:id="@+id/textViewSalt"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="5"/>
            </LinearLayout>

            <Button
                android:id="@+id/cartDetailsToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Przejdź do koszyka"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/cartDetailsToBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Przejdź do czytnika kodów"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/cartDetailsToRecognizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Przejdź do rozpoznawania tekstu"
                android:textStyle="bold"/>

        </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>



</LinearLayout>