...
                <TextView
                    android:id="@+id/shopItemList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Produkty w wózku"/>
                <Button
                    android:id="@+id/cartToCartDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Przejdź wartości odżywczych"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/cartToBarcode"
...
