<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background_blue"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Podaj na ile dni robisz zakupy"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFor"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/menuConfirm"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Zatwierdź"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonBarcodeReader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Skorzystaj z czytnika kodów kreskowych"
        android:textStyle="bold" />
    <Button
        android:id="@+id/buttonTextRecognizer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Skorzystaj z rozpoznawania tekstu"
        android:textStyle="bold"/>


</LinearLayout>